tree-sitter-tinoc/grammar.js
    source_file: ($) => repeat($._top_level_item),

    _top_level_item: ($) =>
      choice(
        $.module_declaration,
        $.module_block_declaration,
        $.import_declaration,
        $.importc_declaration,
        $.run_declaration,
        $.partial_declaration,
        $.function_declaration,
        $.struct_declaration,
        $.enum_declaration,
        $.union_declaration,
        $.variable_declaration,
        $.const_declaration,
        $.alias_declaration,
        $.extern_fn_declaration,
        $.test_declaration,
      ),

    // ========================================================================
    // Comments
    // ========================================================================

    identifier: ($) => /[a-zA-Z_][a-zA-Z0-9_]*/,

    // ========================================================================
    // Module System — all end with ;
    // ========================================================================

    module_declaration: ($) =>
      prec.right(seq("module", field("name", $.identifier), ";")),

    import_declaration: ($) =>
      seq(
        "#import",
        field(
          "path",
          choice(
            $.import_path,
            $.import_wildcard,
            $.import_list,
            $.import_string,
          ),
        ),
        optional(seq("as", field("alias", $.identifier))),
        ";",
      ),

    import_path: ($) =>
      prec.left(1, seq(
        $.identifier,
        repeat(seq(".", $.identifier)),
      )),

    import_wildcard: ($) => prec(2, seq(
      $.identifier,
      repeat(seq(".", $.identifier)),
      ".*",
    )),

    import_string: ($) =>
      prec.right(seq($.string, optional(seq("as", $.identifier)))),

    function_declaration: ($) =>
      prec.right(
        seq(
          optional("pub"),
          optional("static"),
          "fn",
          field("name", $.identifier),
          optional($.generic_type_args),
          field("parameters", $.parameter_list),
          optional(field("return_type", $._type)),
          choice(field("body", $.block), ";"),
        ),
      ),

    parameter_list: ($) => seq("(", optional(commaSep($.parameter)), ")"),

    parameter: ($) =>
      prec.left(
        seq(field("name", $.identifier), field("type", $._type)),
      ),

    // ========================================================================
    // Generic Type Arguments
    // ========================================================================

    generic_type_args: ($) =>
      seq(
        ":",
        choice($.type_list, seq("(", commaSep1($._type), ")")),
      ),

    type_list: ($) => commaSep1($._type),

    // ========================================================================
    // Types
    // ========================================================================

    _type: ($) =>
      choice(
        $.primitive_type,
        $.pointer_type,
        $.optional_type,
        $.error_union_type,
        $.array_type,
        $.slice_type,
        $.generic_type,
        $.identifier,
        $.parenthesized_type,
      ),

    pointer_type: ($) => prec(2, seq("^", $._type)),

    error_union_type: ($) =>
      prec.right(3, choice(
        seq("!", $._type),
        seq($._type, "!", $._type),
      )),

    generic_type: ($) =>
      seq(
        field("name", $.identifier),
        ":",
        field("type_args", choice(
          $.type_list,
          seq("(", commaSep1($._type), ")"),
        )),
      ),

    parenthesized_type: ($) => seq("(", $._type, ")"),

    // ========================================================================
    // Structs
    // ========================================================================

    struct_declaration: ($) =>
      seq(
        optional("pub"),
        "struct",
        field("name", $.identifier),
        optional($.generic_type_args),
        field("body", $.struct_body),
      ),

    struct_body: ($) =>
      seq(
        "{",
        repeat(
          choice(
            $.struct_field_declaration,
            $.function_declaration,
            $.const_declaration,
            $.variable_declaration,
          ),
        ),
        "}",
      ),

    struct_field_declaration: ($) =>
      seq(field("name", $.identifier), field("type", $._type), ";"),

    // ========================================================================
    // Enums
    // ========================================================================

    enum_declaration: ($) =>
      seq(
        optional("pub"),
        "enum",
        field("name", $.identifier),
        optional($.generic_type_args),
        field("body", $.enum_body),
      ),

    enum_body: ($) =>
      seq(
        "{",
        commaSep(
          choice(
            $.enum_variant,
            $.function_declaration,
            $.const_declaration,
          ),
        ),
        optional(","),
        "}",
      ),

    enum_variant: ($) =>
      seq(
        field("name", $.identifier),
        optional(field("payload", $.enum_payload)),
      ),

    enum_payload: ($) => seq("(", commaSep1($._type), ")"),

    // ========================================================================
    // Unions
    // ========================================================================

    variable_declaration: ($) =>
      seq(
        "var",
        field("name", $.identifier),
        optional(field("type", $._type)),
        optional(seq("=", field("value", $._expression))),
        ";",
      ),

    const_declaration: ($) =>
      prec.right(
        seq(
          optional("pub"),
          "const",
          field("name", $.identifier),
          optional(field("type", $._type)),
          optional(seq("=", field("value", $._expression))),
          ";",
        ),
      ),

    // ========================================================================
    // Alias — ends with ;
    // ========================================================================

    block: ($) => seq("{", repeat($._statement), "}"),

    _statement: ($) =>
      prec(1, choice(
        $.variable_declaration,
        $.const_declaration,
        $.return_statement,
        $.break_statement,
        $.continue_statement,
        $.if_statement,
        $.while_statement,
        $.for_statement,
        $.switch_statement,
        $.expression_statement,
      )),

    expression_statement: ($) =>
      prec(1, seq($._expression, ";")),

    return_statement: ($) =>
      prec.right(seq("return", optional($._expression), ";")),

    break_statement: (_) => prec.right(seq("break", ";")),

    continue_statement: (_) => prec.right(seq("continue", ";")),

    // ========================================================================
    // Control Flow
    // ========================================================================

    if_statement: ($) =>
      prec.right(seq(
        "if",
        field("condition", $._expression),
        field("consequence", $.block),
        optional(seq(
          "else",
          field("alternative", choice($.block, $.if_statement)),
        )),
      )),

    while_statement: ($) =>
      seq(
        "while",
        field("condition", $._expression),
        field("body", $.block),
      ),

    // High precedence so the capture pipes `|i|` are not eaten by binary `|`
    for_statement: ($) =>
      prec(8, seq(
        "for",
        field("iterable", choice($.range_expression, $._expression)),
        "|",
        field("variable", $.identifier),
        "|",
        field("body", $.block),
      )),

    switch_statement: ($) =>
      prec.right(seq(
        "switch",
        field("value", $._expression),
        "{",
        repeat($.switch_arm),
        "}",
      )),

    switch_arm: ($) =>
      prec(-1, seq(
        field("pattern", choice($._expression, "_")),
        "=>",
        field("body", $.block),
        optional(","),
      )),

    // ========================================================================
    // Expressions
    // ========================================================================

    _expression: ($) =>
      choice(
        $.identifier,
        $.primitive_type,
        $.integer,
        $.float,
        $.string,
        $.char_literal,
        $.true,
        $.false,
        $.null,
        $.unary_expression,
        $.binary_expression,
        $.call_expression,
        $.index_expression,
        $.member_expression,
        $.deref_expression,
        $.parenthesized_expression,
        $.struct_literal,
        $.array_literal,
        $.optional_unwrap,
        $.type_cast_expression,
        $.address_of_expression,
        $.catch_expression,
        $.range_expression,
      ),

    binary_expression: ($) => {
      // Precedence from syntax.md (highest to lowest):
      //   * / % ** *% *|
      //   ||
      //   + - ++ +% -% +| -|
      //   << >> <<|
      //   &
      //   ^
      //   |
      //   orelse catch
      //   == != < > <= >=
      //   and or
      //   = *= **= *%= *|= /= %= += +%= +|= -= -%= -|= <<= <<|= >>= &= ^= |=
      const table = [
        ["right", 1,  "="],
        ["right", 2,  "**=", "*%=", "*|=", ">>=", "<<=", "<<|=",
                       "+=", "-=", "*=", "/=", "%=", "&=", "|=", "^=",
                       "+%=", "+|=", "-%=", "-|="],
        ["left",  3,  "or"],
        ["left",  4,  "and"],
        ["left",  5,  "==", "!=", "<", ">", "<=", ">="],
        ["left",  6,  "orelse"],
        ["left",  7,  "|"],
        ["left",  8,  "^"],
        ["left",  9,  "&"],
        ["left",  10, "<<", ">>", "<<|"],
        ["left",  11, "+", "-", "++", "+%", "-%", "+|", "-|"],
        ["left",  12, "||"],
        ["left",  13, "*", "/", "%", "**", "*%", "*|"],
      ];

      return choice(
        ...table.map(([assoc, prec_level, ...ops]) => {
          const rule = seq(
            field("left", $._expression),
            field("operator", ops.length === 1 ? ops[0] : choice(...ops)),
            field("right", $._expression),
          );
          return prec[assoc](prec_level, rule);
        }),
      );
    },

    // `a catch b` / `a catch |err| b` — defaulting error unwrap
    call_expression: ($) =>
      prec(16, seq(
        field("function", $._expression),
        optional(seq(":", $.type_list)),
        field("arguments", $.argument_list),
      )),

    argument_list: ($) => seq("(", optional(commaSep($._expression)), ")"),

    member_expression: ($) =>
      prec.left(17, seq(
        field("object", $._expression),
        ".",
        field("property", $.identifier),
      )),

    deref_expression: ($) => prec(16, seq($._expression, "^")),

    struct_literal: ($) =>
      prec(1, seq(
        field("type", $._type),
        "{",
        optional(commaSep($.struct_literal_field)),
        "}",
      )),

    struct_literal_field: ($) =>
      prec.right(seq(
        ".",
        field("name", $.identifier),
        "=",
        field("value", $._expression),
      )),

    range_expression: ($) =>
      prec.left(9, seq(
        field("start", $._expression),
        "..",
        field("end", $._expression),
      )),

    // ========================================================================
    // Literals
    // ========================================================================

    integer: (_) =>
      token(choice(
        /0[xX][0-9a-fA-F][0-9a-fA-F_]*/,
        /0[oO][0-7][0-7_]*/,
        /0[bB][01][01_]*/,
        /0|[1-9][0-9_]*/,
      )),

    float: (_) =>
      token(choice(
        /[0-9][0-9_]*\.[0-9][0-9_]*[eE][+-]?[0-9][0-9_]*/,
        /[0-9][0-9_]*\.[0-9][0-9_]*/,
        /[0-9][0-9_]*[eE][+-]?[0-9][0-9_]*/,
        /0[xX][0-9a-fA-F][0-9a-fA-F_]*\.[0-9a-fA-F][0-9a-fA-F_]*[pP][+-]?[0-9][0-9_]*/,
        /0[xX][0-9a-fA-F][0-9a-fA-F_]*\.[0-9a-fA-F][0-9a-fA-F_]*/,
        /0[xX][0-9a-fA-F][0-9a-fA-F_]*[pP][+-]?[0-9][0-9_]*/,
      )),

    string: (_) =>
      token(seq(
        '"',
        repeat(choice(
          /[^"\\\n]/,
          /\\[\\abfnrtv0'"]/,
          /\\x[0-9a-fA-F]{2}/,
          /\\u\{[0-9a-fA-F]+\}/,
        )),
        '"',
      )),
